fix: RG-2155 Text with symbols overflow tab #RG-2155 fix [publish]

--- a/components/tabs/tabs.css
+++ b/components/tabs/tabs.css
@@ -115,6 +115,7 @@
 .hidden {
   visibility: hidden;
 
+  font-family: monospace;
   font-weight: bold;
 }
 
